--- a/index.html
+++ b/index.html
@@ -50,23 +50,43 @@
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="features-list">
           <li class="features-list-item">
+            <div class="feature-icons-container">
+              <svg class="feature-icon-svg" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="features-subtitle">Strategy</h3>
             <p class="features-item-title">Our goal is to identify the business
               problem to walk away with the perfect and creative solution.</p>
           </li>
           <li class="features-list-item">
+            <div class="feature-icons-container">
+              <svg class="feature-icon-svg" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="features-subtitle">Punctuality</h3>
             <p class="features-item-title">Bring the key message to the brand's audience for the best price within the
               shortest
               possible time.</p>
           </li>
           <li class="features-list-item">
+            <div class="feature-icons-container">
+              <svg class="feature-icon-svg" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="features-subtitle">Diligence</h3>
             <p class="features-item-title">Research and confirm brands that present the strongest digital growth
               opportunities and
               minimize risk.</p>
           </li>
           <li class="features-list-item">
+            <div class="feature-icons-container">
+              <svg class="feature-icon-svg" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="features-subtitle">Technologies</h3>
             <p class="features-item-title">Design practice focused on digital experiences. We bring forth a deep passion
               for
@@ -85,14 +105,74 @@
             <div class="container-team-description">
               <h3 class="team-subtitle">Mark Guerrero</h3>
               <p class="team-item-title">Product Designer</p>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
-          <li class="team-list-item">
+          <li class=" team-list-item">
             <img src="./images/frontend-developer.jpg" alt="frontend-developer" width="264" height="260"
               class="team-image">
             <div class="container-team-description">
               <h3 class="team-subtitle">Tom Ford</h3>
               <p class="team-item-title">Frontend Developer</p>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list-item">
@@ -100,6 +180,36 @@
             <div class="container-team-description">
               <h3 class="team-subtitle">Camila Garcia</h3>
               <p class="team-item-title">Marketing</p>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list-item">
@@ -107,6 +217,36 @@
             <div class="container-team-description">
               <h3 class="team-subtitle">Daniel Wilson</h3>
               <p class="team-item-title">UI Designer</p>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="team-icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
@@ -127,6 +267,11 @@
           <li class="portfolio-list-item">
             <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"
               class="portfolio-images">
+            <div class="overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+              Ecommerce App ·
+              Cloud Storage App
+            </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Cashless Payment</h3>
               <p class="portfolio-item-title">Marketing</p>
@@ -170,10 +315,45 @@
 
   <footer class="end">
     <div class="container footer-background">
-      <a class="end-logo" href="./index.html">Web<span class="accent-end">Studio</span></a>
-      <p class="end-title">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="footer-title">
+        <a class="end-logo" href="./index.html">Web<span class="accent-end">Studio</span></a>
+        <p class="end-title">Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
+      <div class="footer-socials">
+        <p class="paragraph-socials">Social media</p>
+        <ul class="footer-list">
+          <li class="footer-icon-item">
+            <a href="" class="footer-icon-link">
+              <svg class="footer-icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icon-item">
+            <a href="" class="footer-icon-link">
+              <svg class="footer-icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icon-item">
+            <a href="" class="footer-icon-link">
+              <svg class="footer-icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icon-item">
+            <a href="" class="footer-icon-link">
+              <svg class="footer-icon-svg" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
