--- a/index.html
+++ b/index.html
@@ -265,12 +265,14 @@
             </div>
           </li>
           <li class="portfolio-list-item">
-            <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"
-              class="portfolio-images">
             <div class="overlay">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-              Ecommerce App ·
-              Cloud Storage App
+              <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"
+                class="portfolio-images">
+              <p class="portfolio-paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit
+                Ecommerce App ·
+                Cloud Storage App</p>
             </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Cashless Payment</h3>
