--- a/index.html
+++ b/index.html
@@ -268,11 +268,12 @@
             <div class="overlay">
               <img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"
                 class="portfolio-images">
-              <p class="portfolio-paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+              <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                 Calorie Tracker App · Exotic
                 Fruit
                 Ecommerce App ·
-                Cloud Storage App</p>
+                Cloud Storage App
+              </p>
             </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Cashless Payment</h3>
