--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <ul class="icon-list">
                 <li class="icon-item">
                   <a href="" class="icon-link">
-                    <svg class="team-icon-svg" width="16" height="16">
+                    <svg class="team-icon-svg" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
@@ -258,7 +258,15 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-list-item">
-            <img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" class="portfolio-images">
+            <div class="overlay">
+              <img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300" class="portfolio-images">
+              <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit
+                Ecommerce App ·
+                Cloud Storage App
+              </p>
+            </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Banking App</h3>
               <p class="portfolio-item-title">App</p>
@@ -281,31 +289,63 @@
             </div>
           </li>
           <li class="portfolio-list-item">
-            <img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300"
-              class="portfolio-images">
+            <div class="overlay">
+              <img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300"
+                class="portfolio-images">
+              <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit
+                Ecommerce App ·
+                Cloud Storage App
+              </p>
+            </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Meditation App</h3>
               <p class="portfolio-item-title">App</p>
             </div>
           </li>
           <li class="portfolio-list-item">
-            <img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300" class="portfolio-images">
+            <div class="overlay">
+              <img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300" class="portfolio-images">
+              <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit
+                Ecommerce App ·
+                Cloud Storage App
+              </p>
+            </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Taxi Service</h3>
               <p class="portfolio-item-title">Marketing</p>
             </div>
           </li>
           <li class="portfolio-list-item">
-            <img src="./images/screen-illustrations.jpg" alt="screen-illustrations" width="360" height="300"
-              class="portfolio-images">
+            <div class="overlay">
+              <img src="./images/screen-illustrations.jpg" alt="screen-illustrations" width="360" height="300"
+                class="portfolio-images">
+              <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit
+                Ecommerce App ·
+                Cloud Storage App
+              </p>
+            </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Screen Illustrations</h3>
               <p class="portfolio-item-title">Design</p>
             </div>
           </li>
           <li class="portfolio-list-item">
-            <img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300"
-              class="portfolio-images">
+            <div class="overlay">
+              <img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300"
+                class="portfolio-images">
+              <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit
+                Ecommerce App ·
+                Cloud Storage App
+              </p>
+            </div>
             <div class="container-portfolio">
               <h3 class="portfolio-subtitle">Online Courses</h3>
               <p class="portfolio-item-title">Marketing</p>
