--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="header-nav">
         <a href="./index.html" class="header-logo">Web<span class="accent">Studio</span></a>
         <ul class="header-menu-list">
-          <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
+          <li class="header-menu-item"><a class="header-menu-link-hover" href="./index.html">Studio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
         </ul>
